--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -1,6 +1,6 @@
 {% include 'header.twig' %}
 
-<p><a href="{{ app.request.baseUrl ~ '/add' }}" class="btn"><b class="icon-pencil"></b> Share Your Thought</a></p>
+<p><a href="{{ app.request.baseUrl ~ '/add' }}" class="btn"><b class="icon-pencil"></b> Comparte tu pensamiento</a></p>
 
 <div class="hero-unit">
     <div class="row-fluid">
