--- a/src/templates/add.twig
+++ b/src/templates/add.twig
@@ -18,7 +18,7 @@
   <div class="control-group">
     <div class="controls">
       <button type="submit" class="btn btn-primary"><b class="icon-ok icon-white"></b> Comparte tu pensamiento</button>
-      <a href="{{ app.request.baseUrl ~ '/' }}" class="btn"><b class="icon-chevron-left"></b> Go Back</a>
+      <a href="{{ app.request.baseUrl ~ '/' }}" class="btn"><b class="icon-chevron-left"></b> Volver</a>
     </div>
   </div>
 </form>
