--- a/src/templates/add.twig
+++ b/src/templates/add.twig
@@ -17,7 +17,7 @@
   </div>
   <div class="control-group">
     <div class="controls">
-      <button type="submit" class="btn btn-primary"><b class="icon-ok icon-white"></b> Envía tu pensamiento</button>
+      <button type="submit" class="btn btn-primary"><b class="icon-ok icon-white"></b> Comparte tu pensamiento</button>
       <a href="{{ app.request.baseUrl ~ '/' }}" class="btn"><b class="icon-chevron-left"></b> Volver</a>
     </div>
   </div>
